# internal/response/response.go
@@ -9,3 +9,8 @@ type UserRegisterResponse struct {
 	Name  string `json:"name"`
 	Email string `json:"email"`
 }
+
+type TokenResponse struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
